logs/bibliopixel.log
Listing '.'...
Listing './bin'...
Compiling './bin/miniterm.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/BiblioPixel-3.4.2.egg-info'...
Listing './lib/python3.5/site-packages/BiblioPixelAnimations'...
Listing './lib/python3.5/site-packages/BiblioPixelAnimations/base'...
Listing './lib/python3.5/site-packages/BiblioPixelAnimations/circle'...
Listing './lib/python3.5/site-packages/BiblioPixelAnimations/cube'...
Listing './lib/python3.5/site-packages/BiblioPixelAnimations/cube/spectrum'...
Listing './lib/python3.5/site-packages/BiblioPixelAnimations/game'...
Listing './lib/python3.5/site-packages/BiblioPixelAnimations/matrix'...
Listing './lib/python3.5/site-packages/BiblioPixelAnimations/matrix/spectrum'...
Listing './lib/python3.5/site-packages/BiblioPixelAnimations/receivers'...
Listing './lib/python3.5/site-packages/BiblioPixelAnimations/strip'...
Listing './lib/python3.5/site-packages/BiblioPixelAnimations-3.20171217.174917.egg-info'...
Listing './lib/python3.5/site-packages/BiblioPixelTriggers'...
Listing './lib/python3.5/site-packages/BiblioPixelTriggers/solar'...
Listing './lib/python3.5/site-packages/BiblioPixelTriggers-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/GitPython-2.1.8.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bibliopixel'...
Listing './lib/python3.5/site-packages/bibliopixel/animation'...
Listing './lib/python3.5/site-packages/bibliopixel/animation/remote'...
Listing './lib/python3.5/site-packages/bibliopixel/animation/reprocess'...
Listing './lib/python3.5/site-packages/bibliopixel/colors'...
Listing './lib/python3.5/site-packages/bibliopixel/controllers'...
Listing './lib/python3.5/site-packages/bibliopixel/drivers'...
Listing './lib/python3.5/site-packages/bibliopixel/drivers/SPI'...
Listing './lib/python3.5/site-packages/bibliopixel/drivers/SimPixel'...
Listing './lib/python3.5/site-packages/bibliopixel/drivers/serial'...
Listing './lib/python3.5/site-packages/bibliopixel/layout'...
Listing './lib/python3.5/site-packages/bibliopixel/layout/geometry'...
Listing './lib/python3.5/site-packages/bibliopixel/main'...
Listing './lib/python3.5/site-packages/bibliopixel/project'...
Listing './lib/python3.5/site-packages/bibliopixel/project/types'...
Listing './lib/python3.5/site-packages/bibliopixel/util'...
Listing './lib/python3.5/site-packages/bibliopixel/util/colors'...
Listing './lib/python3.5/site-packages/bibliopixel/util/threads'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/croniter'...
Listing './lib/python3.5/site-packages/croniter/tests'...
Listing './lib/python3.5/site-packages/croniter-0.3.20.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/git'...
Listing './lib/python3.5/site-packages/git/index'...
Listing './lib/python3.5/site-packages/git/objects'...
Listing './lib/python3.5/site-packages/git/objects/submodule'...
Listing './lib/python3.5/site-packages/git/refs'...
Listing './lib/python3.5/site-packages/git/repo'...
Listing './lib/python3.5/site-packages/git/test'...
Listing './lib/python3.5/site-packages/git/test/fixtures'...
Listing './lib/python3.5/site-packages/git/test/lib'...
Listing './lib/python3.5/site-packages/git/test/performance'...
Listing './lib/python3.5/site-packages/gitdb'...
Listing './lib/python3.5/site-packages/gitdb/db'...
Listing './lib/python3.5/site-packages/gitdb/test'...
Listing './lib/python3.5/site-packages/gitdb/utils'...
Listing './lib/python3.5/site-packages/gitdb2-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/loady'...
Listing './lib/python3.5/site-packages/loady-1.7.8.egg-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyserial-3.4.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/scripts'...
Listing './lib/python3.5/site-packages/serial'...
Listing './lib/python3.5/site-packages/serial/threaded'...
Listing './lib/python3.5/site-packages/serial/tools'...
Listing './lib/python3.5/site-packages/serial/urlhandler'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/smmap'...
Listing './lib/python3.5/site-packages/smmap/test'...
Listing './lib/python3.5/site-packages/smmap2-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/ui'...
Listing './lib/python3.5/site-packages/ui/web_remote'...
Listing './lib/python3.5/site-packages/ui/web_remote/favicon'...
Listing './lib/python3.5/site-packages/ui/web_remote/font-awesome'...
Listing './lib/python3.5/site-packages/ui/web_remote/font-awesome/css'...
Listing './lib/python3.5/site-packages/ui/web_remote/font-awesome/fonts'...
Listing './lib/python3.5/site-packages/ui/web_remote/overpass-mono'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
